--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -25,6 +25,7 @@
 									<option value="scheduled">Scheduled</option>
 									<option value="invoiced">Invoiced</option>
 									<option value="paid">Paid</option>
+									<option value="submitted">Submitted</option>
 								</select>
 							</div>
 						</div>
