--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,6 +11,10 @@ html(lang="en", ng-app="biomed", ng-controller="biomed.PageCtrl")
 				progress-panel
 				ul.nav.pull-right(ng-controller='biomed.AccountCtrl')
 					li
+						a(href='https://docs.google.com/a/atlanticbiomedical.com/forms/d/1i7CyNR2lcrz7bOL7u9ssKiMB2iBmXqOdvVKC0GRzRtY/viewform', target='_blank')
+							i.icon-shopping-cart
+							|  Sales
+					li
 						a(href='https://docs.google.com/a/atlanticbiomedical.com/forms/d/16tPHoTkEQB7fqXxBDZk_7s-WLz6a3eXVBWiUyA0fntM/viewform', target='_blank')
 							i.icon-thumbs-down
 							|  Incident
