Added tags to clients page

--- a/app/views/tag.jade
+++ b/app/views/tag.jade
@@ -104,7 +104,7 @@ html(lang="en", ng-app="tags", ng-controller="tags.PageCtrl")
 					.control-group
 						label.control-label Device Warranty Expiration
 						.controls
-							input.text(type='date', ng-model='deviceWarrantyExpiration')
+							input.text(type='date', ng-model='tag.deviceWarrantyExpiration')
 
 					.control-group
 						label.control-label Test
