--- a/public/partials/workorders/add.html
+++ b/public/partials/workorders/add.html
@@ -185,7 +185,12 @@
 	<div class="form-section">
 		<div class="section-label">&nbsp;</div>
 		<div class="section-container">
-			<button ng-click="save()" type="button" class="btn btn-primary">Save</button>
+			<p><b>Note:</b></p>
+			<p>Please only click save once, your work order is being saved the first time you click the button. There is a small bug preventing the page from returning you back to where you came from. This will be fixed after working hours.</p>
+			<p>If you notice any other issues, or need help with a work order, please feel free to <a href="http://atlanticbiomedical.com/ticket/" target="new"> Open a Ticket</a>
+			<br><br>
+                        <button ng-click="save()" type="button" class="btn btn-primary">Save</button>
+
 		</div>
 	</div>
 </div>
