--- a/public/partials/clients/add.html
+++ b/public/partials/clients/add.html
@@ -165,6 +165,27 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="form-section">
+		<div class="section-label">Notes</div>
+		<div class="section-container">
+			<div class="form-editor">
+				<div class="control-group">
+					<label class="control-label">Internal</label>
+					<div class="controls">
+						<textarea ng-model="model.notes.internal" type="text" class="input-xlarge"></textarea>
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label">Tech</label>
+					<div class="controls">
+						<textarea ng-model="model.notes.tech" type="text" class="input-xlarge"></textarea>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<div class="form-section">
 		<div class="section-label">&nbsp;</div>
