--- a/public/partials/schedule/index.html
+++ b/public/partials/schedule/index.html
@@ -9,7 +9,8 @@
 	<div class="span12">
 		<div class="toolbelt">
 			<a href="/workorders/add" class="btn btn-primary">Create new Workorder</a>
-			<a href="/schedule/pms" class="btn btn-primary">View PMs</a>
+			<a href="/workorders/add?workorderType=meeting" class="btn">Create new Meeting</a>
+			<a href="/schedule/pms" class="btn">View PMs</a>
 			<div class="pull-right">
 	            <span class="toolbelt-text">Group: </span>
 	            <div class="input-append">
