--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -23,9 +23,9 @@ html(lang="en", ng-app="biomed", ng-controller="biomed.PageCtrl")
 							i.icon-fire
 							|  Tickets
 					li
-						a(ng-click="disabledopenDialog()")
+						a(ng-click="openDialog()")
 							i.icon-envelope
-							|  Messages (disabled)
+							|  Messages
 					li
 						a(href='/logout', target='_self')
 							i.icon-share-alt
