--- a/public/partials/workorders/edit.html
+++ b/public/partials/workorders/edit.html
@@ -34,7 +34,7 @@
 						</div>
 						<div class="form-actions">
 							<button ng-click="status.save(false)" type="button" class="btn btn-primary">Save</button>
-							<button ng-click="status.save(true)" type="button" class="btn" disabled>Save & Notify</button>
+							<button ng-click="status.save(true)" type="button" class="btn">Save & Notify</button>
 							<button ng-click="status.reset()" type="button" class="btn">Cancel</button>
 						</div>
 					</div>
@@ -57,7 +57,7 @@
                                                 </div>
                                                 <div class="form-actions">
                                                         <button ng-click="emails.save(false)" type="button" class="btn btn-primary">Save</button>
-                                                        <button ng-click="emails.save(true)" type="button" class="btn" disabled>Save & Notify</button>
+                                                        <button ng-click="emails.save(true)" type="button" class="btn">Save & Notify</button>
                                                         <button ng-click="emails.reset()" type="button" class="btn">Cancel</button>
                                                 </div>
                                         </div>
@@ -127,7 +127,7 @@
 						</div>
 						<div class="form-actions">
 							<button ng-click="remarks.save(false)" type="button" class="btn btn-primary">Save</button>
-							<button	ng-click="remarks.save(true)" type="button" class="btn" disabled>Save & Notify</button>
+							<button	ng-click="remarks.save(true)" type="button" class="btn">Save & Notify</button>
 							<button ng-click="remarks.reset()" type="button" class="btn">Cancel</button>
 						</div>
 					</div>
@@ -320,7 +320,7 @@
 							end="scheduling.endTime"></techpicker>
 						<div class="form-actions">
 							<button ng-click="scheduling.save(false)" type="button" class="btn btn-primary">Save</button>
-							<button	ng-click="scheduling.save(true)" type="button" class="btn" disabled>Save & Notify</button>
+							<button	ng-click="scheduling.save(true)" type="button" class="btn">Save & Notify</button>
 							<button ng-click="scheduling.reset()" type="button" class="btn">Cancel</button>
 						</div>
 					</div>
