--- a/public/partials/clients/edit.html
+++ b/public/partials/clients/edit.html
@@ -151,7 +151,7 @@
 					<div ng-hide="primaryContact.visible" class="form-preview">
 						{{master.contacts[0].name}}<br ng-show="master.contacts[0].name">
 						{{master.contacts[0].phone}}<br ng-show="master.contacts[0].phone">
-						{{master.contacts[0].email}}<br ng-show="master.contacts[0].email">
+						<a href="mailto:{{master.contacts[0].email}}">{{master.contacts[0].email}}</a><br ng-show="master.contacts[0].email">
 						<a ng-click="primaryContact.edit()" ng-class="{disabled: editing}">Edit</a>
 					</div>
 					<div ng-show="primaryContact.visible" class="form-editor">
