--- a/public/partials/workorders/add.html
+++ b/public/partials/workorders/add.html
@@ -276,7 +276,7 @@
 		<div class="section-label">&nbsp;</div>
 		<div class="section-container">
                         <button ng-click="save(false)" type="button" class="btn btn-primary">Save</button>
-			<button ng-click="save(true)" type="button" class="btn" disabled>Save & Notify</button>
+			<button ng-click="save(true)" type="button" class="btn">Save & Notify</button>
 		</div>
 	</div>
 </div>
