--- a/public/partials/clients/index.html
+++ b/public/partials/clients/index.html
@@ -8,7 +8,7 @@
 <div class="row-fluid">
 	<div class="span12">
 		<div class="toolbelt">
-			<a href="/clients/add" class="btn btn-primary">Create new Client</a>
+			<a href="/clients/add" class="btn btn-primary" ng-show="accountHasPermission('system.edit')">Create new Client</a>
 			<div class="pull-right">
 				<span class="toolbelt-text">Search:</span>
 	            <div class="input-append">
