--- a/public/partials/users/index.html
+++ b/public/partials/users/index.html
@@ -21,7 +21,7 @@
 				<tr>
 					<th colspan="2"></th>
 					<th colspan="5">Groups</th>
-					<th colspan="4">Permissions</th>
+					<th colspan="5">Permissions</th>
 				</tr>
 				<tr>
 					<th style="width: 15%">Name</th>
@@ -34,6 +34,7 @@
 					<th style="width: 5%" class="group-start">Portal</th>
 					<th style="width: 5%">Tags</th>
 					<th style="width: 5%">Messages</th>
+					<th style="width: 5%">Edit</th>
 					<th style="width: 5%">Admin</th>
 				</tr>
 			</thead>
@@ -52,8 +53,8 @@
 					<td class="group-start {{ checkPerm(user, 'system.login') }}"><a ng-click="togglePerm(user, 'system.login')"><i ng-class="{ 'icon-ok': checkPerm(user, 'system.login'), 'icon-remove': !checkPerm(user, 'system.login')}"></i></a></td>
 					<td class="{{ checkPerm(user, 'system.tags') }}"><a ng-click="togglePerm(user, 'system.tags')"><i ng-class="{ 'icon-ok': checkPerm(user, 'system.tags'), 'icon-remove': !checkPerm(user, 'system.tags')}"></i></a></td>
 					<td class="{{ checkPerm(user, 'messages.receive') }}"><a ng-click="togglePerm(user, 'messages.receive')"><i ng-class="{ 'icon-ok': checkPerm(user, 'messages.receive'), 'icon-remove': !checkPerm(user, 'messages.receive')}"></i></a></td>
+					<td class="{{ checkPerm(user, 'system.edit') }}"><a ng-click="togglePerm(user, 'system.edit')"><i ng-class="{ 'icon-ok': checkPerm(user, 'system.edit'), 'icon-remove': !checkPerm(user, 'system.edit')}"></i></a></td>
 					<td class="{{ checkPerm(user, 'system.admin') }}"><a ng-click="togglePerm(user, 'system.admin')"><i ng-class="{ 'icon-ok': checkPerm(user, 'system.admin'), 'icon-remove': !checkPerm(user, 'system.admin')}"></i></a></td>
-
 				</tr>
 			</tbody>
 		</table>
